[package]
name = "sagongsa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing-subscriber = "0.3.18"
